# claude-dt

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: PRD.md
src/dt/: __init__.py  analyzers.py  api.py  cli.py  config.py  db.py  ingest.py
tests/: __init__.py  conftest.py  test_analyzers.py  test_cli.py  test_db.py  test_ingest.py
web/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
web/src/: App.tsx  api.ts  main.tsx
web/src/components/: AntipatternList.tsx  InfoBox.tsx  Pagination.tsx  RecommendationCard.tsx  ScoreCard.tsx  ScoreDashboard.tsx  SortableTable.tsx  StatCard.tsx  TrendChart.tsx
web/src/pages/: Dashboard.tsx  Recommendations.tsx  Report.tsx  Sessions.tsx  Trends.tsx
