[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-dt"
version = "0.4.0"
description = "Actionable feedback from your Claude Code sessions"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Justin Johnson" },
]
keywords = ["claude-code", "devtools", "analytics", "llm", "developer-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.0",
    "duckdb>=1.0",
    "rich>=13.0",
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
]

[project.scripts]
dt = "dt.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/dt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
